# svc-trainings

./: .dockerignore  .gitignore  .stignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  okteto.yml  pyproject.toml
.github/: codecov.yml
.github/workflows/: cd.yml  ci.yml  close_pr.yml  open_pr.yml
alembic/: env.py
alembic/versions/: 05d989a5a5c7_add_favorites.py  1c72412e20e8_init.py  5c420357e3b3_add_scores.py  afe7ae9f34cc_add_missing_fields.py  d9f252b4b7b5_add_goal_description_and_training_.py
docs/: README.md  migrations.md  structure.md
k8s/: backend-config.yml  backend.yml  ingress.yml  postgres-config.yml  postgres-pv.yaml  postgres.yml
src/: auth.py  config.py  conftest.py  database.py  logging.py  main.py  main_test.py  metrics.py  test_utils.py  trainings.py  trainings_test.py
src/api/: aliases.py  favorites.py  favorites_test.py  scores.py  scores_test.py  training.py  trainings.py  trainings_test.py
src/api/model/: favorites.py  training.py  utils.py
src/common/: model.py
src/db/: config.py  favorites.py  migration.py  mock_session.py  session.py  training.py  trainings.py  utils.py
src/db/model/: favorite.py  training.py
src/metrics/: config.py  logging_queue.py  queue.py  reports.py
