[tool.poetry]
name = "trainings"
version = "0.1.0"
description = ""
authors = ["Tomas Gruner <47506558+MegaRedHand@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
pydantic = "^1.10.7"
uvicorn = "^0.21.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.8"}
asyncpg = "^0.27.0"
alembic = "^1.10.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
mypy = "^1.1.1"
flake8 = "^6.0.0"
httpx = "^0.23.3"
aiosqlite = "^0.18.0"
types-python-jose = "^3.3.4.6"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
